--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ LazyData: true
 Depends: R (>= 4.0.0)
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
+URL: https://github.com/Tinarj/auflights
+BugReports: https://github.com/Tinarj/auflights/issues
